Fix position ios

--- a/themes/r3fi/src/style/main.scss
+++ b/themes/r3fi/src/style/main.scss
@@ -52,6 +52,7 @@ h1 {
     top: 0;
     height: 100%;
     width: 100%;
+    z-index: -10;
     background-image: url("../images/gplay.png");
   }
 }
